teller-cli/tests/snapshots/flow_test__flow-test-dot-0.snap
---
source: teller-cli/tests/flow_test.rs
expression: res
---
Ok(
    [
        KV {
            value: "bar baz",
            key: "FOO",
            from_key: "FOO",
            path: Some(
                PathInfo {
                    id: "tvars",
                    path: "fixtures/flow_test_vars.env",
                },
            ),
            provider: Some(
                ProviderInfo {
                    kind: Dotenv,
                    name: "dot_1",
                },
            ),
            meta: Some(
                MetaInfo {
                    sensitivity: None,
                    redact_with: None,
                    source: None,
                    sink: None,
                },
            ),
        },
        KV {
            value: "linus",
            key: "USER_NAME",
            from_key: "USER_NAME",
            path: Some(
                PathInfo {
                    id: "tvars",
                    path: "fixtures/flow_test_vars.env",
                },
            ),
            provider: Some(
                ProviderInfo {
                    kind: Dotenv,
                    name: "dot_1",
                },
            ),
            meta: Some(
                MetaInfo {
                    sensitivity: None,
                    redact_with: None,
                    source: None,
                    sink: None,
                },
            ),
        },
    ],
)
